# notlatt-patt-mlops

./: .gitignore  README.md  requirements.txt
.github/workflows/: ml_pipeline.yml  train_action.yml
dagger/: go.mod  go.sum  main.go
data/raw/: raw_data.csv.dvc
src/: config.py  features.py
src/modeling/: deploy.py  models.py  select.py  train.py
temp_root/: params.yaml  pyproject.toml
temp_root/src/: analyze_data.py  clean_data.py  config.py  features_data.py  ingestion.py  preprocessing.py  utils.py
temp_root/src/modeling/: evaluate.py  select.py
